[metadata]
name = marugoto
version = 0.8.0
author = Marko van Treeck
author_email = mvantreeck@ukaachen.de
description = A toolbox for building deep learning workflows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KatherLab/marugoto
project_urls =
    Bug Tracker = https://github.com/KatherLab/marugoto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    h5py>=3.6.0,<4
    numpy>=1.22.1,<2
    openpyxl~=3.0,<4
    pandas>=1.4.0,<2
    torch>=1.8.3,<2
    fastai>=2.5.3,<3
    fire>=0.4.0,<0.5